syntax = "proto3";
package IM.Login;
import "IM.BaseDefine.proto";
option optimize_for = LITE_RUNTIME;

message IMLoginReq{
	//cmd id:		0x0103
    string user_name = 1;
    string password = 2;
	string client_version = 3;
}

message IMLoginRes{
	//cmd id:		0x0104
    uint32 server_time = 1;
    IM.BaseDefine.ResultType result_code = 2;
    string result_string = 3;
    IM.BaseDefine.UserInfo user_info = 4;
}